--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"
     />
-    <link href="/css/about.620b948d.css" rel="prefetch" />
-    <link href="/js/about.41bc9acf.js" rel="prefetch" />
-    <link href="/css/app.d00360e8.css" rel="preload" as="style" />
-    <link href="/css/chunk-vendors.3ec00333.css" rel="preload" as="style" />
-    <link href="/js/app.b7e7a1f0.js" rel="preload" as="script" />
-    <link href="/js/chunk-vendors.cf0633d2.js" rel="preload" as="script" />
-    <link href="/css/chunk-vendors.3ec00333.css" rel="stylesheet" />
-    <link href="/css/app.d00360e8.css" rel="stylesheet" />
+    <link href="css/about.620b948d.css" rel="prefetch" />
+    <link href="js/about.41bc9acf.js" rel="prefetch" />
+    <link href="css/app.d00360e8.css" rel="preload" as="style" />
+    <link href="css/chunk-vendors.3ec00333.css" rel="preload" as="style" />
+    <link href="js/app.b7e7a1f0.js" rel="preload" as="script" />
+    <link href="js/chunk-vendors.cf0633d2.js" rel="preload" as="script" />
+    <link href="css/chunk-vendors.3ec00333.css" rel="stylesheet" />
+    <link href="css/app.d00360e8.css" rel="stylesheet" />
   </head>
   <body>
     <noscript
@@ -36,7 +36,7 @@
     >
     <div id="app"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/interact.js/1.2.8/interact.min.js"></script>
-    <script src="/js/chunk-vendors.cf0633d2.js"></script>
-    <script src="/js/app.b7e7a1f0.js"></script>
+    <script src="js/chunk-vendors.cf0633d2.js"></script>
+    <script src="js/app.b7e7a1f0.js"></script>
   </body>
 </html>
