--- a/index.html
+++ b/index.html
@@ -1,42 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <link rel="icon" href="/favicon.ico" />
-    <title>nfttinder</title>
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"
-    />
-    <link href="css/about.620b948d.css" rel="prefetch" />
-    <link href="js/about.41bc9acf.js" rel="prefetch" />
-    <link href="css/app.d00360e8.css" rel="preload" as="style" />
-    <link href="css/chunk-vendors.3ec00333.css" rel="preload" as="style" />
-    <link href="js/app.b7e7a1f0.js" rel="preload" as="script" />
-    <link href="js/chunk-vendors.cf0633d2.js" rel="preload" as="script" />
-    <link href="css/chunk-vendors.3ec00333.css" rel="stylesheet" />
-    <link href="css/app.d00360e8.css" rel="stylesheet" />
-  </head>
-  <body>
-    <noscript
-      ><strong
-        >We're sorry but nfttinder doesn't work properly without JavaScript
-        enabled. Please enable it to continue.</strong
-      ></noscript
-    >
-    <div id="app"></div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/interact.js/1.2.8/interact.min.js"></script>
-    <script src="js/chunk-vendors.cf0633d2.js"></script>
-    <script src="js/app.b7e7a1f0.js"></script>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/favicon.ico"><title>nfttinder</title><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"><link href="/css/about.4a5ab681.css" rel="prefetch"><link href="/js/about.6aaf1d7b.js" rel="prefetch"><link href="/css/app.d00360e8.css" rel="preload" as="style"><link href="/css/chunk-vendors.3ec00333.css" rel="preload" as="style"><link href="/js/app.e89e6aac.js" rel="preload" as="script"><link href="/js/chunk-vendors.cf0633d2.js" rel="preload" as="script"><link href="/css/chunk-vendors.3ec00333.css" rel="stylesheet"><link href="/css/app.d00360e8.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but nfttinder doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="https://cdnjs.cloudflare.com/ajax/libs/interact.js/1.2.8/interact.min.js"></script><script src="/js/chunk-vendors.cf0633d2.js"></script><script src="/js/app.e89e6aac.js"></script></body></html>
